fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,11 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+	color: #FFD5A3;
 	text-decoration: none;
 }
 a:hover, a:focus {
-	color: #3397db;
+	color: #16527E;
 	text-decoration: none;
 }
 a img{
@@ -46,7 +46,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #DEDEDE;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 5px 0;
@@ -95,7 +95,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #16527E;
     text-decoration: none;
 }
 
@@ -114,11 +114,17 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+#map div a {
+  color: #11607D;
+}
+#map div .leaflet-control-attribution {
+  background: #fff;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
   height: 53px;
-  background-color: #3397DB;
+  background-color: #155B8E;
   align-items: center;
   display: flex;
 }
@@ -169,7 +175,7 @@ nav h1 a {
   border-radius: 28px 0 0 0; */
 } 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #7A4100;
   font-family: Arial,sans-serif;
   font-size: 4vw;
   font-weight: 200;
@@ -187,7 +193,7 @@ nav h1 a {
 
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #7A4100;
   border-bottom: 0 solid #eee;
   color: #fff;
   display: inline-block;
@@ -221,7 +227,7 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #7A4100;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -261,7 +267,7 @@ nav h1 a {
   padding: 9px 0;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #7A4100;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -287,8 +293,7 @@ nav h1 a {
 }
 
 #reviews-list li p {
-  margin: 0 0 10px;
-  text-emphasis: 
+  margin: 0 0 10px; 
 }
 #restaurant-hours td {
   color: #666;
